<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5sp"
            android:background="@color/navigationBarColor"/>

        <RadioGroup
            android:id="@+id/rgMaptype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/rbNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"/>

            <RadioButton
                android:id="@+id/rbNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"/>

            <RadioButton
                android:id="@+id/rbSatellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite"/>

            <RadioButton
                android:id="@+id/rbTerrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terrain"/>
            <RadioButton
                android:id="@+id/rbHybrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hybrid"/>

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5sp"
            android:background="@color/navigationBarColor"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>