<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5sp"
            android:background="@color/navigationBarColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilihJenjang"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_jenjang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_sd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sd" />

            <RadioButton
                android:id="@+id/rb_smp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smp" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5sp"
            android:background="@color/navigationBarColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilihJarak"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:layout_weight="2"
                android:max="10"
                android:progress="0"/>

            <TextView
                android:id="@+id/txtSeekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:text="@string/firstSeekbar"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/navigationBarColor" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>